Add man page for cxl_mmio_install_sigbus_handler()

--- a/man3/cxl.3
+++ b/man3/cxl.3
@@ -216,6 +216,7 @@ cxl_mmio_write64	write a 32-bit word to the mapped AFU Problem State Area
 .BR cxl_get_pp_mmio_off (3),
 .BR cxl_get_prefault_mode (3),
 .BR cxl_get_psl_revision (3),
+.BR cxl_mmio_install_sigbus_handler (3),
 .BR cxl_mmio_map (3),
 .BR cxl_mmio_ptr (3),
 .BR cxl_mmio_rea (3),2.3
