Man page updates for attach_work and libcxl 1.2
Signed-off-by: Philippe Bergheaud <felix@linux.vnet.ibm.com>

--- a/man3/cxl_errinfo_read.3
+++ b/man3/cxl_errinfo_read.3
@@ -1,6 +1,6 @@
 .\" Copyright 2015 IBM Corp.
 .\"
-.TH CXL_ERRINFO_READ 3 2015-02-27 "" "CXL Programmer's Manual"
+.TH CXL_ERRINFO_READ 3 2015-08-15 "LIBCXL 1.2" "CXL Programmer's Manual"
 .SH NAME
 cxl_errinfo_read \- Read and copy the contents of afu_err_info buffer
 .SH SYNOPSIS
