--- a/man3/cxl.3
+++ b/man3/cxl.3
@@ -1,6 +1,6 @@
 .\" Copyright 2015 IBM Corp.
 .\"
-.TH CXL 3 2015-02-27 "" "CXL Programmer's Manual"
+.TH CXL 3 2015-08-15 "LIBCXL 1.2" "CXL Programmer's Manual"
 .SH NAME
 cxl \- Coherent Accelerator Interface (CXL) library functions
 .SH SYNOPSIS
@@ -101,6 +101,15 @@ Function	Description
 _
 cxl_afu_attach_full	attach the calling process's memory to an open AFU
 cxl_afu_attach	attach the calling process's memory to an open AFU
+cxl_work_alloc	allocate and initialize a work structure
+cxl_work_attach	attach the calling process's memory to an open AFU
+cxl_work_free	free a work structure
+cxl_work_get_amr	get the value of the authority mask register
+cxl_work_get_num_irqs	get the number of interrupts requested
+cxl_work_get_wed	get the value of the work element descriptor
+cxl_work_set_amr	set the value of the authority mask register
+cxl_work_set_num_irqs	set the number of interrupts requested
+cxl_work_set_wed	set the value of the work element descriptor
 .TE
 .SS CXL Adapter Sysfs Helper functions
 .TS
@@ -206,8 +215,9 @@ cxl_errinfo_read	read and copy the contents of afu_err_info buffer into the prov
 .BR cxl_afu_open_h (3),
 .BR cxl_afu_opened (3),
 .BR cxl_afu_sysfs_pci (3),
-.BR cxl_errinfo_size (3),
 .BR cxl_errinfo_read (3),
+.BR cxl_errinfo_size (3),
+.BR cxl_event_pending (3),
 .BR cxl_for_each_adapter (3),
 .BR cxl_for_each_adapter_afu (3),
 .BR cxl_for_each_afu (3),
@@ -238,9 +248,18 @@ cxl_errinfo_read	read and copy the contents of afu_err_info buffer into the prov
 .BR cxl_mmio_unmap (3),
 .BR cxl_mmio_writ (3),2.3
 .BR cxl_mmio_write64 (3),
-.BR cxl_event_pending (3),
 .BR cxl_read_event (3),
 .BR cxl_read_expected_event (3),
 .BR cxl_set_irqs_max (3),
 .BR cxl_set_mode (3),
-.BR cxl_set_prefault_mode (3)
+.BR cxl_set_prefault_mode, (3)
+.BR cxl_work_alloc (3),
+.BR cxl_work_get_amr (3),
+.BR cxl_work_set_amr (3),
+.BR cxl_work_attach (3),
+.BR cxl_work_get_num_irqs (3),
+.BR cxl_work_set_num_irqs (3),
+.BR cxl_work_free (3),
+.BR cxl_work_get_wed (3),
+.BR cxl_work_set_wed (3)
+
