--- a/man3/cxl_adapter_next.3
+++ b/man3/cxl_adapter_next.3
@@ -1,6 +1,6 @@
 .\" Copyright 2015 IBM Corp.
 .\"
-.TH CXL_ADAPTER_NEXT 3 2015-02-27 "" "CXL Programmer's Manual"
+.TH CXL_ADAPTER_NEXT 3 2015-08-15 "LIBCXL 1.2" "CXL Programmer's Manual"
 .SH NAME
 cxl_adapter_next \- iterate to the next CXL adapter
 .PP
