--- a/man3/cxl_afu_fd.3
+++ b/man3/cxl_afu_fd.3
@@ -1,6 +1,6 @@
 .\" Copyright 2015 IBM Corp.
 .\"
-.TH CXL_AFU_FD 3 2015-02-27 "" "CXL Programmer's Manual"
+.TH CXL_AFU_FD 3 2015-08-15 "LIBCXL 1.2" "CXL Programmer's Manual"
 .SH NAME
 cxl_afu_fd \- return the file descriptor of an AFU handle
 .SH SYNOPSIS
