--- a/man3/cxl_afu_get_process_element.3
+++ b/man3/cxl_afu_get_process_element.3
@@ -1,6 +1,6 @@
 .\" Copyright 2015 IBM Corp.
 .\"
-.TH CXL_AFU_GET_PROCESS_ELEMENT 3 2015-02-27 "" "CXL Manual"
+.TH CXL_AFU_GET_PROCESS_ELEMENT 3 2015-08-15 "LIBCXL 1.2" "CXL Manual"
 .SH NAME
 cxl_afu_get_process_element \- get the process element associated with an open AFU handle
 .SH SYNOPSIS
