--- a/man3/cxl_afu_sysfs_pci.3
+++ b/man3/cxl_afu_sysfs_pci.3
@@ -1,6 +1,6 @@
 .\" Copyright 2015 IBM Corp.
 .\"
-.TH CXL_AFU_SYSFS_PCI 3 2015-02-27 "" "CXL Programmer's Manual"
+.TH CXL_AFU_SYSFS_PCI 3 2015-08-15 "LIBCXL 1.2" "CXL Programmer's Manual"
 .SH NAME
 cxl_afu_sysfs_pci \- get the sysfs path to the PCI device corresponding with 
 an AFU
