--- a/man3/cxl_event_pending.3
+++ b/man3/cxl_event_pending.3
@@ -1,6 +1,6 @@
 .\" Copyright 2015 IBM Corp.
 .\"
-.TH CXL_EVENT_PENDING 3 2015-02-27 "" "CXL Programmer's Manual"
+.TH CXL_EVENT_PENDING 3 2015-08-15 "LIBCXL 1.2" "CXL Programmer's Manual"
 .SH NAME
 cxl_event_pending \- return whether a CXL event is pending
 .SH SYNOPSIS
