--- a/man3/cxl_fprint_event.3
+++ b/man3/cxl_fprint_event.3
@@ -1,6 +1,6 @@
 .\" Copyright 2015 IBM Corp.
 .\"
-.TH CXL_FPRINT_EVENT 3 2015-02-27 "" "CXL Programmer's Manual"
+.TH CXL_FPRINT_EVENT 3 2015-08-15 "LIBCXL 1.2" "CXL Programmer's Manual"
 .SH NAME
 cxl_fprint_event \- print out a description of a CXL event for debugging
 .SH SYNOPSIS
