--- a/man3/cxl_fprint_unknown_event.3
+++ b/man3/cxl_fprint_unknown_event.3
@@ -1,6 +1,6 @@
 .\" Copyright 2015 IBM Corp.
 .\"
-.TH CXL_FPRINT_UNKNOWN_EVENT 3 2015-02-27 "" "CXL Manual"
+.TH CXL_FPRINT_UNKNOWN_EVENT 3 2015-08-15 "LIBCXL 1.2" "CXL Manual"
 .SH NAME
 cxl_fprint_unknown_event \- print out a hex dump of a raw CXL event for debugging
 .SH SYNOPSIS
