--- a/man3/cxl_get_caia_version.3
+++ b/man3/cxl_get_caia_version.3
@@ -1,6 +1,6 @@
 .\" Copyright 2015 IBM Corp.
 .\"
-.TH CXL_GET_CAIA_VERSION 3 2015-02-27 "" "CXL Programmer's Manual"
+.TH CXL_GET_CAIA_VERSION 3 2015-08-15 "LIBCXL 1.2" "CXL Programmer's Manual"
 .SH NAME
 cxl_get_caia_version \- get the CAIA version supported by a CXL adapter
 .SH SYNOPSIS
