--- a/man3/cxl_get_cr_class.3
+++ b/man3/cxl_get_cr_class.3
@@ -1,6 +1,6 @@
 .\" Copyright 2015 IBM Corp.
 .\"
-.TH CXL_GET_CR_CLASS 3 2015-02-27 "" "CXL Programmer's Manual"
+.TH CXL_GET_CR_CLASS 3 2015-08-15 "LIBCXL 1.2" "CXL Programmer's Manual"
 .SH NAME
 cxl_get_cr_class \- get the class code out of an AFU configuration record
 .SH SYNOPSIS
