--- a/man3/cxl_get_irqs_max.3
+++ b/man3/cxl_get_irqs_max.3
@@ -1,6 +1,6 @@
 .\" Copyright 2015 IBM Corp.
 .\"
-.TH CXL_GET_IRQS_MAX 3 2015-02-27 "" "CXL Programmer's Manual"
+.TH CXL_GET_IRQS_MAX 3 2015-08-15 "LIBCXL 1.2" "CXL Programmer's Manual"
 .SH NAME
 cxl_get_irqs_max \- get the maximum number of AFU interrupts available to a context, if it was the only context running
 .SH SYNOPSIS
@@ -44,4 +44,6 @@ Insufficient memory.
 .BR cxl_get_mode (3),
 .BR cxl_get_modes_supported (3),
 .BR cxl_get_prefault_mode (3),
-.BR cxl_set_irqs_max (3)
+.BR cxl_set_irqs_max (3),
+.BR cxl_work_attach (3),
+.BR cxl_work_set_num_irqs (3)
