--- a/man3/cxl_get_mmio_size.3
+++ b/man3/cxl_get_mmio_size.3
@@ -1,6 +1,6 @@
 .\" Copyright 2015 IBM Corp.
 .\"
-.TH CXL_GET_MMIO_SIZE 3 2015-02-27 "" "CXL Programmer's Manual"
+.TH CXL_GET_MMIO_SIZE 3 2015-08-15 "LIBCXL 1.2" "CXL Programmer's Manual"
 .SH NAME
 cxl_get_mmio_size \- get the total size of the MMIO space of an AFU, including all per-process areas
 .PP
