--- a/man3/cxl_get_modes_supported.3
+++ b/man3/cxl_get_modes_supported.3
@@ -1,6 +1,6 @@
 .\" Copyright 2015 IBM Corp.
 .\"
-.TH CXL_GET_MODES_SUPPORTED 3 2015-02-27 "" "CXL Programmer's Manual"
+.TH CXL_GET_MODES_SUPPORTED 3 2015-08-15 "LIBCXL 1.2" "CXL Programmer's Manual"
 .SH NAME
 cxl_get_modes_supported \- get the programming modes supported by an AFU
 .SH SYNOPSIS
