--- a/man3/cxl_get_psl_revision.3
+++ b/man3/cxl_get_psl_revision.3
@@ -1,6 +1,6 @@
 .\" Copyright 2015 IBM Corp.
 .\"
-.TH CXL_GET_PSL_REVISION 3 2015-02-27 "" "CXL Programmer's Manual"
+.TH CXL_GET_PSL_REVISION 3 2015-08-15 "LIBCXL 1.2" "CXL Programmer's Manual"
 .SH NAME
 cxl_get_psl_revision \- get the revision level of the current PSL image loaded on the CXL device
 .SH SYNOPSIS
