--- a/man3/cxl_mmio_map.3
+++ b/man3/cxl_mmio_map.3
@@ -1,6 +1,6 @@
 .\" Copyright 2015 IBM Corp.
 .\"
-.TH CXL_MMIO_MAP 3 2015-02-27 "" "CXL Programmer's Manual"
+.TH CXL_MMIO_MAP 3 2015-08-15 "LIBCXL 1.2" "CXL Programmer's Manual"
 .SH NAME
 cxl_mmio_map \- map the per-process Problem State Area of an AFU to memory
 .SH SYNOPSIS
