--- a/man3/cxl_mmio_ptr.3
+++ b/man3/cxl_mmio_ptr.3
@@ -1,6 +1,6 @@
 .\" Copyright 2015 IBM Corp.
 .\"
-.TH CXL_MMIO_PTR 3 2015-02-27 "" "CXL Programmer's Manual"
+.TH CXL_MMIO_PTR 3 2015-08-15 "LIBCXL 1.2" "CXL Programmer's Manual"
 .SH NAME
 cxl_mmio_ptr \- return the address of the mapped AFU Problem State Area
 .SH SYNOPSIS
