--- a/man3/cxl_mmio_write32.3
+++ b/man3/cxl_mmio_write32.3
@@ -1,6 +1,6 @@
 .\" Copyright 2015 IBM Corp.
 .\"
-.TH CXL_MMIO_WRITE32 3 2015-02-27 "" "CXL Programmer's Manual"
+.TH CXL_MMIO_WRITE32 3 2015-08-15 "LIBCXL 1.2" "CXL Programmer's Manual"
 .SH NAME
 cxl_mmio_write32 \- write a 32-bit word to the mapped AFU Problem State Area
 .SH SYNOPSIS
