--- a/man3/cxl_read_event.3
+++ b/man3/cxl_read_event.3
@@ -1,6 +1,6 @@
 .\" Copyright 2015 IBM Corp.
 .\"
-.TH CXL_READ_EVENT 3 2015-02-27 "" "CXL Programmer's Manual"
+.TH CXL_READ_EVENT 3 2015-08-15 "LIBCXL 1.2" "CXL Programmer's Manual"
 .SH NAME
 cxl_read_event \- read one CXL event from an AFU
 .SH SYNOPSIS
