--- a/man3/cxl_set_irqs_max.3
+++ b/man3/cxl_set_irqs_max.3
@@ -1,6 +1,6 @@
 .\" Copyright 2015 IBM Corp.
 .\"
-.TH CXL_SET_IRQS_MAX 3 2015-02-27 "" "CXL Programmer's Manual"
+.TH CXL_SET_IRQS_MAX 3 2015-08-15 "LIBCXL 1.2" "CXL Programmer's Manual"
 .SH NAME
 cxl_set_irqs_max \- administratively restrict the maximum number of AFU interrupts
 .SH SYNOPSIS
