--- a/man3/cxl_set_mode.3
+++ b/man3/cxl_set_mode.3
@@ -1,6 +1,6 @@
 .\" Copyright 2015 IBM Corp.
 .\"
-.TH CXL_SET_MODE 3 2015-02-27 "" "CXL Programmer's Manual"
+.TH CXL_SET_MODE 3 2015-08-15 "LIBCXL 1.2" "CXL Programmer's Manual"
 .SH NAME
 cxl_set_mode \- set the programming mode of an AFU
 .SH SYNOPSIS
