--- a/man3/cxl_errinfo_read.3
+++ b/man3/cxl_errinfo_read.3
@@ -62,4 +62,4 @@ application specific and depends on the AFU being used.
 
 .SH SEE ALSO
 .BR cxl (3),
-.BR cxl_errinfo_size (3),
+.BR cxl_errinfo_size (3)
