--- a/man3/cxl_errinfo_size.3
+++ b/man3/cxl_errinfo_size.3
@@ -63,4 +63,4 @@ application specific and depends on the AFU being used.
 
 .SH SEE ALSO
 .BR cxl (3),
-.BR cxl_errinfo_read (3),
+.BR cxl_errinfo_read (3)
