--- a/man3/cxl_get_irqs_min.3
+++ b/man3/cxl_get_irqs_min.3
@@ -18,6 +18,8 @@ for each context of
 .PP
 This is the minimum number that must be requested when calling
 .BR cxl_afu_attach_full ()
+or
+.BR cxl_afu_attach_work ()
 for
 .IR afu .
 It is implicitly requested by
@@ -38,10 +40,10 @@ Insufficient memory.
 .BR cxl (3),
 .BR cxl_afu_attach (3),
 .BR cxl_afu_attach_full (3),
+.BR cxl_afu_attach_work (3),
 .BR cxl_get_irqs_max (3),
 .BR cxl_get_mode (3),
 .BR cxl_get_modes_supported (3),
 .BR cxl_get_prefault_mode (3),
 .BR cxl_set_irqs_max (3),
-.BR cxl_work_attach (3),
 .BR cxl_work_set_num_irqs (3)
