--- a/man3/cxl_mmio_map.3
+++ b/man3/cxl_mmio_map.3
@@ -61,6 +61,7 @@ AFU device in AFU directed mode, slave context.
 .BR cxl (3),
 .BR cxl_afu_attach (3),
 .BR cxl_afu_attach_full (3),
+.BR cxl_afu_attach_work (3),
 .BR cxl_get_mmio_size (3),
 .BR cxl_mmio_ptr (3),
 .BR cxl_mmio_read32 (3),
