--- a/man3/cxl_afu_attach_full.3
+++ b/man3/cxl_afu_attach_full.3
@@ -61,6 +61,7 @@ Not enough interrupts available.
 .SH SEE ALSO
 .BR cxl (3),
 .BR cxl_afu_attach (3),
+.BR cxl_afu_attach_work (3),
 .BR cxl_afu_fd_to_h (3),
 .BR cxl_afu_free (3),
 .BR cxl_afu_open_dev (3),
