--- a/man3/cxl_afu_free.3
+++ b/man3/cxl_afu_free.3
@@ -17,6 +17,7 @@ frees the data structures and memory buffers of
 .BR cxl_adapter_afu_next (3),
 .BR cxl_afu_attach (3),
 .BR cxl_afu_attach_full (3),
+.BR cxl_afu_attach_work (3),
 .BR cxl_afu_fd (3),
 .BR cxl_afu_fd_to_h (3),
 .BR cxl_afu_next (3),
