--- a/man3/cxl_afu_open_dev.3
+++ b/man3/cxl_afu_open_dev.3
@@ -53,6 +53,7 @@ AFU device in AFU directed mode, slave context.
 .BR cxl (3),
 .BR cxl_afu_attach (3),
 .BR cxl_afu_attach_full (3),
+.BR cxl_afu_attach_work (3),
 .BR cxl_afu_dev_name (3),
 .BR cxl_afu_fd (3),
 .BR cxl_afu_fd_to_h (3),
