--- a/man3/cxl_afu_opened.3
+++ b/man3/cxl_afu_opened.3
@@ -26,6 +26,7 @@ Invalid argument value.
 .BR cxl (3),
 .BR cxl_afu_attach (3),
 .BR cxl_afu_attach_full (3),
+.BR cxl_afu_attach_work (3),
 .BR cxl_afu_dev_name (3),
 .BR cxl_afu_fd (3),
 .BR cxl_afu_fd_to_h (3),
