--- a/man3/cxl_get_irqs_max.3
+++ b/man3/cxl_get_irqs_max.3
@@ -19,6 +19,8 @@ if it was the only context running.
 This is the maximum number of interrupts that may be requested
 when calling
 .BR cxl_afu_attach_full ()
+or
+.BR cxl_afu_attach_work ()
 for
 .IR afu .
 The default on probe is the maximum that hardware can support.
@@ -40,10 +42,10 @@ Insufficient memory.
 .BR cxl (3),
 .BR cxl_afu_attach (3),
 .BR cxl_afu_attach_full (3),
+.BR cxl_afu_attach_work (3),
 .BR cxl_get_irqs_min (3),
 .BR cxl_get_mode (3),
 .BR cxl_get_modes_supported (3),
 .BR cxl_get_prefault_mode (3),
 .BR cxl_set_irqs_max (3),
-.BR cxl_work_attach (3),
 .BR cxl_work_set_num_irqs (3)
