--- a/man3/cxl_set_mode.3
+++ b/man3/cxl_set_mode.3
@@ -39,6 +39,7 @@ Invalid argument value.
 .BR cxl_adapter_afu_next (3),
 .BR cxl_afu_attach (3),
 .BR cxl_afu_attach_full (3),
+.BR cxl_afu_attach_work (3),
 .BR cxl_afu_fd_to_h (3),
 .BR cxl_afu_next (3),
 .BR cxl_afu_open_dev (3),
