--- a/man3/cxl_set_prefault_mode.3
+++ b/man3/cxl_set_prefault_mode.3
@@ -16,7 +16,10 @@ to
 .IR value .
 The current mode will be used for prefaulting in segments
 into the segment table when performing
-.BR cxl_afu_attach ().
+.BR cxl_afu_attach (),
+.BR cxl_afu_attach_full ()
+or
+.BR cxl_afu_attach_work ().
 Mode must be one of the
 .B "enum cxl_prefault_mode"
 values:
@@ -45,5 +48,6 @@ Invalid argument value.
 .BR cxl_adapter_afu_next (3),
 .BR cxl_afu_attach (3),
 .BR cxl_afu_attach_full (3),
+.BR cxl_afu_attach_work (3),
 .BR cxl_afu_next (3),
 .BR cxl_get_prefault_mode (3)
