typo error in 3 man pages
detected by rpmlint tool

Signed-off-by: Michel Normand <normand@linux.vnet.ibm.com>

--- a/man3/cxl_afu_attach.3
+++ b/man3/cxl_afu_attach.3
@@ -23,7 +23,7 @@ The AFU memory context will be updated as userspace allocates and
 frees memory.
 .PP
 The work element descriptor
-.wed
+.I wed
 is a 64-bit argument defined by the AFU.
 Typically this is an effective address pointing to an AFU specific
 structure describing what work to perform.
