--- a/man3/cxl_work_set_wed.3
+++ b/man3/cxl_work_set_wed.3
@@ -15,7 +15,7 @@ sets the value of the work element descriptor
 into the struct
 .IR work .
 The work element descriptor
-.wed
+.I wed
 is a 64-bit argument defined by the AFU.
 Typically this is an effective address pointing to an AFU specific
 structure describing what work to perform.
