--- a/man3/cxl.3
+++ b/man3/cxl.3
@@ -1,6 +1,6 @@
 .\" Copyright 2015 IBM Corp.
 .\"
-.TH CXL 3 2015-08-15 "LIBCXL 1.2" "CXL Programmer's Manual"
+.TH CXL 3 2016-05-25 "LIBCXL 1.4" "CXL Programmer's Manual"
 .SH NAME
 cxl \- Coherent Accelerator Interface (CXL) library functions
 .SH SYNOPSIS
@@ -241,6 +241,7 @@ cxl_errinfo_read	read and copy the contents of afu_err_info buffer into the prov
 .BR cxl_get_pp_mmio_off (3),
 .BR cxl_get_prefault_mode (3),
 .BR cxl_get_psl_revision (3),
+.BR cxl_get_psl_timebase_synced (3),
 .BR cxl_mmio_install_sigbus_handler (3),
 .BR cxl_mmio_map (3),
 .BR cxl_mmio_ptr (3),
