--- a/man3/cxl_get_image_loaded.3
+++ b/man3/cxl_get_image_loaded.3
@@ -1,6 +1,6 @@
 .\" Copyright 2015 IBM Corp.
 .\"
-.TH CXL_GET_IMAGE_LOADED 3 2015-08-15 "LIBCXL 1.2" "CXL Programmer's Manual"
+.TH CXL_GET_IMAGE_LOADED 3 2016-05-25 "LIBCXL 1.4" "CXL Programmer's Manual"
 .SH NAME
 cxl_get_image_loaded \- returns which of the user and factory PSL images is currently loaded on the CXL device
 .SH SYNOPSIS
@@ -38,4 +38,5 @@ Insufficient memory.
 .BR cxl_adapter_next (3),
 .BR cxl_get_base_image (3),
 .BR cxl_get_caia_version (3),
-.BR cxl_get_psl_revision (3)
+.BR cxl_get_psl_revision (3),
+.BR cxl_get_psl_timebase_synced (3)
