--- a/man3/cxl_get_psl_revision.3
+++ b/man3/cxl_get_psl_revision.3
@@ -1,6 +1,6 @@
 .\" Copyright 2015 IBM Corp.
 .\"
-.TH CXL_GET_PSL_REVISION 3 2015-08-15 "LIBCXL 1.2" "CXL Programmer's Manual"
+.TH CXL_GET_PSL_REVISION 3 2016-05-25 "LIBCXL 1.4" "CXL Programmer's Manual"
 .SH NAME
 cxl_get_psl_revision \- get the revision level of the current PSL image loaded on the CXL device
 .SH SYNOPSIS
@@ -32,3 +32,4 @@ Insufficient memory.
 .BR cxl_get_base_image (3),
 .BR cxl_get_caia_version (3),
 .BR cxl_get_image_loaded (3)
+.BR cxl_get_psl_timebase_synced (3)
