Man pages: document flags CXL_MMIO_{BIG,HOST,LITTLE}_ENDIAN
Signed-off-by: Philippe Bergheaud <felix@linux.vnet.ibm.com>

--- a/man3/cxl.3
+++ b/man3/cxl.3
@@ -44,9 +44,9 @@ Macro	Description
 _
 CXL_DEV_DIR	CXL device directory pathname
 CXL_KERNEL_API_VERSION	maximum supported CXL kernel API compatible version
-CXL_MMIO_BIG_ENDIAN	MMIO big endian flag
-CXL_MMIO_HOST_ENDIAN	MMIO host endian flag
-CXL_MMIO_LITTLE_ENDIAN	MMIO little endian flag
+CXL_MMIO_BIG_ENDIAN	big-endian AFU flag
+CXL_MMIO_HOST_ENDIAN	host-endian AFU flag
+CXL_MMIO_LITTLE_ENDIAN	little-endian AFU flag
 CXL_MODE_DEDICATED	dedicated process mode flag
 CXL_MODE_DIRECTED	AFU directed mode flag
 CXL_SYSFS_CLASS	sysfs CXL class pathname
