--- a/man3/cxl_fprint_unknown_event.3
+++ b/man3/cxl_fprint_unknown_event.3
@@ -1,6 +1,6 @@
-.\" Copyright 2015 IBM Corp.
+.\" Copyright 2015-2017 IBM Corp.
 .\"
-.TH CXL_FPRINT_UNKNOWN_EVENT 3 2016-05-25 "LIBCXL 1.4" "CXL Manual"
+.TH CXL_FPRINT_UNKNOWN_EVENT 3 2017-05-24 "LIBCXL 1.5" "CXL Manual"
 .SH NAME
 cxl_fprint_unknown_event \- print out a hex dump of a raw CXL event for debugging
 .SH SYNOPSIS
