--- a/man3/cxl_get_image_loaded.3
+++ b/man3/cxl_get_image_loaded.3
@@ -1,6 +1,6 @@
-.\" Copyright 2015 IBM Corp.
+.\" Copyright 2015-2017 IBM Corp.
 .\"
-.TH CXL_GET_IMAGE_LOADED 3 2016-05-25 "LIBCXL 1.4" "CXL Programmer's Manual"
+.TH CXL_GET_IMAGE_LOADED 3 2017-05-24 "LIBCXL 1.5" "CXL Programmer's Manual"
 .SH NAME
 cxl_get_image_loaded \- returns which of the user and factory PSL images is currently loaded on the CXL device
 .SH SYNOPSIS
