--- a/man3/cxl_get_psl_timebase_synced.3
+++ b/man3/cxl_get_psl_timebase_synced.3
@@ -1,6 +1,6 @@
-.\" Copyright 2015 IBM Corp.
+.\" Copyright 2015-2017 IBM Corp.
 .\"
-.TH CXL_GET_PSL_TIMEBASE_SYNCED 3 2016-05-25 "LIBCXL 1.4" "CXL Manual"
+.TH CXL_GET_PSL_TIMEBASE_SYNCED 3 2017-05-24 "LIBCXL 1.5" "CXL Manual"
 .SH NAME
 cxl_get_psl_timebase_synced \- get the status of timebase on the CXL device
 .SH SYNOPSIS
