--- a/man3/cxl_adapter_afu_next.3
+++ b/man3/cxl_adapter_afu_next.3
@@ -1,6 +1,6 @@
-.\" Copyright 2015 IBM Corp.
+.\" Copyright 2015-2017 IBM Corp.
 .\"
-.TH CXL_ADAPTER_AFU_NEXT 3 2016-05-25 "LIBCXL 1.4" "CXL Programmer's Manual"
+.TH CXL_ADAPTER_AFU_NEXT 3 2017-05-24 "LIBCXL 1.5" "CXL Programmer's Manual"
 .SH NAME
 cxl_adapter_afu_next \- iterate to the next AFU of a CXL adapter
 .PP
