--- a/man3/cxl_errinfo_size.3
+++ b/man3/cxl_errinfo_size.3
@@ -1,6 +1,6 @@
-.\" Copyright 2015 IBM Corp.
+.\" Copyright 2015-2017 IBM Corp.
 .\"
-.TH CXL_ERRINFO_SIZE 3 2016-05-25 "LIBCXL 1.4" "CXL Programmer's Manual"
+.TH CXL_ERRINFO_SIZE 3 2017-05-24 "LIBCXL 1.5" "CXL Programmer's Manual"
 .SH NAME
 cxl_errinfo_size \- returns the size of afu_err_buff in bytes
 .SH SYNOPSIS
