--- a/man3/cxl_get_api_version_compatible.3
+++ b/man3/cxl_get_api_version_compatible.3
@@ -1,6 +1,6 @@
-.\" Copyright 2015 IBM Corp.
+.\" Copyright 2015-2017 IBM Corp.
 .\"
-.TH CXL_GET_API_VERSION_COMPATIBLE 3 2016-05-25 "LIBCXL 1.4" "CXL Manual"
+.TH CXL_GET_API_VERSION_COMPATIBLE 3 2017-05-24 "LIBCXL 1.5" "CXL Manual"
 .SH NAME
 cxl_get_api_version_compatible \- get the lowest CXL API version compatible with the kernel
 .SH SYNOPSIS
