--- a/man3/cxl_mmio_install_sigbus_handler.3
+++ b/man3/cxl_mmio_install_sigbus_handler.3
@@ -1,6 +1,6 @@
-.\" Copyright 2015 IBM Corp.
+.\" Copyright 2015-2017 IBM Corp.
 .\"
-.TH CXL_MMIO_INSTALL_SIGBUS_HANDLER 3 2015-03-30 "" "CXL Programmer's Manual"
+.TH CXL_MMIO_INSTALL_SIGBUS_HANDLER 3 2017-05-24 "" "CXL Programmer's Manual"
 .SH NAME
 cxl_mmio_install_sigbus_handler \- install the libcxl SIGBUS handler to catch MMIO access errors
 .SH SYNOPSIS
