--- a/man3/cxl_mmio_unmap.3
+++ b/man3/cxl_mmio_unmap.3
@@ -1,6 +1,6 @@
-.\" Copyright 2015 IBM Corp.
+.\" Copyright 2015-2017 IBM Corp.
 .\"
-.TH CXL_MMIO_UNMAP 3 2016-05-25 "LIBCXL 1.4" "CXL Programmer's Manual"
+.TH CXL_MMIO_UNMAP 3 2017-05-24 "LIBCXL 1.5" "CXL Programmer's Manual"
 .SH NAME
 cxl_mmio_unmap \- unmap an AFU Problem State Area
 .SH SYNOPSIS
