--- a/man3/cxl_read_expected_event.3
+++ b/man3/cxl_read_expected_event.3
@@ -1,6 +1,6 @@
-.\" Copyright 2015 IBM Corp.
+.\" Copyright 2015-2017 IBM Corp.
 .\"
-.TH CXL_READ_EXPECTED_EVENT 3 2016-05-25 "LIBCXL 1.4" "CXL Manual"
+.TH CXL_READ_EXPECTED_EVENT 3 2017-05-24 "LIBCXL 1.5" "CXL Manual"
 .SH NAME
 cxl_read_expected_event \- read one CXL event from an AFU, and treat it as a failure, if it did not match an expected event
 .SH SYNOPSIS
