--- a/man3/cxl_work_free.3
+++ b/man3/cxl_work_free.3
@@ -1,6 +1,6 @@
-.\" Copyright 2015 IBM Corp.
+.\" Copyright 2015-2017 IBM Corp.
 .\"
-.TH CXL_WORK_FREE 3 2016-05-25 "LIBCXL 1.4" "CXL Programmer's Manual"
+.TH CXL_WORK_FREE 3 2017-05-24 "LIBCXL 1.5" "CXL Programmer's Manual"
 .SH NAME
 cxl_work_get_free \- free a work structure
 .SH SYNOPSIS
