Fix a typo in man page man3/cxl_afu_attach_work.3.
Signed-off-by: Philippe Bergheaud <felix@linux.vnet.ibm.com>

--- a/man3/cxl_afu_attach_work.3
+++ b/man3/cxl_afu_attach_work.3
@@ -7,7 +7,7 @@ cxl_afu_attach_work \- attach the calling process's memory to an open AFU
 .B #include <libcxl.h>
 .PP
 .B "int cxl_afu_attach_work(struct cxl_afu_h"
-.BI * afu ", struct cxl_ioctl_work_attach *" work );
+.BI * afu ", struct cxl_ioctl_start_work *" work );
 .SH DESCRIPTION
 .BR cxl_afu_attach_work ()
 attaches a context of
