--- a/man3/cxl_adapter_next.3
+++ b/man3/cxl_adapter_next.3
@@ -60,4 +60,5 @@ CXL adapters:
 .BR cxl_get_caia_version (3),
 .BR cxl_get_image_loaded (3),
 .BR cxl_get_psl_revision (3),
-.BR cxl_get_psl_timebase_synced (3)
+.BR cxl_get_psl_timebase_synced (3),
+.BR cxl_get_tunneled_ops_supported (3)
