Document two extra errors of cxl_afu_attach(), cxl_afu_attach_full() and cxl_afu_attach_work().
Signed-off-by: Philippe Bergheaud <felix@linux.ibm.com>

--- a/man3/cxl_afu_attach_full.3
+++ b/man3/cxl_afu_attach_full.3
@@ -50,8 +50,14 @@ On error, \-1 is returned and
 is set appropriately.
 .SH ERRORS
 .TP
+.B EBUSY
+Process Element Command timeout.
+.TP
 .B EINVAL
 Invalid argument value, or AFU not opened.
+.TP
+.B EIO
+Device link down.
 .TP
 .B ENOMEM
 Not enough memory.
